--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "engines": {
     "node": "10.10.0"
-  } ,
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.2"
   },
